tests/valid/sizeof.fl
using import "../c.fl";

SomeType :: u16;

ConstSize :: @sizeof(SomeType);

main :: proc () {
  printf(c"size of *u8: %ld\n", @sizeof(*u8));
  printf(c"size of i32: %ld\n", @sizeof(i32));
  printf(c"size of i8: %ld\n", @sizeof(i8));
  printf(c"size of SomeType: %ld\n", ConstSize);
  printf(c"size of ConstSize: %ld\n", @sizeof(ConstSize));
}
