tests/invalid/invalid_import.fl
using import "this_file_does_not_exist.fl";

main :: proc () {

}
